Data capturing operational

--- a/private/index.html
+++ b/private/index.html
@@ -10,9 +10,11 @@
     <div class="anthonian-container" style="width: 100%; max-width: 600px; background-color: #CFFFFF; padding: 2%;">
       <h2>Anthonian Uptime Monitoring</h2>
       <p>Automatic pings at 1 minutes intervals, get notified via email.</p>
-      <form action="/presents" method="post">
-        <label for="password">Enter password: </label>
-        <input id="password" type="password" name="password">
+      <form action="/processor" method="post">
+        <label for="email">Your Email: </label>
+        <input id="email" type="email" name="email">
+        <label for="url">The URL: </label>
+        <input id="url" type="url" name="url">
         <input type="submit" value="OK">
       </form>
     </div>
