Added Termination Functions

--- a/private/index.html
+++ b/private/index.html
@@ -17,6 +17,9 @@
         <input id="url" type="url" name="url">
         <input type="submit" value="OK">
       </form>
+      <br>
+      <hr>
+      <p><a href="/terminate"><span>Terminate Monitering Here</span></a></p>
     </div>
     <script src="anthonian-script.js"></script>
   </body>
