Update & Ready for Production

--- a/private/index.html
+++ b/private/index.html
@@ -19,7 +19,9 @@
       </form>
       <br>
       <hr>
-      <p><a href="/terminate"><span>Terminate Monitering Here</span></a></p>
+      <p><a href="/terminate"><span class="anthonian-span">Terminate Monitering Here</span></a></p>
+      <br>
+      <p><a href="https://github.com/Anthonykung/Anthonian-Uptime-Monitoring" target="_blank">Open Source Project</a> Created With <3 By <a href="https://anth.dev" target="_blank">Anthony Kung</a></p>
     </div>
     <script src="anthonian-script.js"></script>
   </body>
