--- a/private/success.html
+++ b/private/success.html
@@ -10,6 +10,8 @@
     <div class="anthonian-container" style="width: 100%; max-width: 600px; background-color: #CFFFFF; padding: 2%;">
       <h2>SUCCESS!</h2>
       <p>We are now monitoring your URL and will notify you via an ugly email from <code>uptime@anth.dev</code> if things go wrong. Have fun :P</p>
+      <br>
+      <p><a href="https://github.com/Anthonykung/Anthonian-Uptime-Monitoring" target="_blank">Open Source Project</a> Created With <3 By <a href="https://anth.dev" target="_blank">Anthony Kung</a></p>
     </div>
     <script src="anthonian-script.js"></script>
   </body>
