--- a/private/terminate.html
+++ b/private/terminate.html
@@ -10,12 +10,14 @@
     <div class="anthonian-container" style="width: 100%; max-width: 600px; background-color: #CFFFFF; padding: 2%;">
       <h2>Anthonian Uptime Monitoring</h2>
       <p>Terminate uptime monitoring and delete your data.</p>
-      <p><span>WARNING: This Action Cannot Be Undone</span></p>
+      <p><span class="anthonian-span">WARNING: This Action Cannot Be Undone</span></p>
       <form action="/terminate" method="post">
         <label for="key">The Key: </label>
         <input id="key" type="text" name="key">
         <input type="submit" value="OK">
       </form>
+      <br>
+      <p><a href="https://github.com/Anthonykung/Anthonian-Uptime-Monitoring" target="_blank">Open Source Project</a> Created With <3 By <a href="https://anth.dev" target="_blank">Anthony Kung</a></p>
     </div>
     <script src="anthonian-script.js"></script>
   </body>
