--- a/private/terminated.html
+++ b/private/terminated.html
@@ -10,7 +10,9 @@
     <div class="anthonian-container" style="width: 100%; max-width: 600px; background-color: #CFFFFF; padding: 2%;">
       <h2>TERMINATION SUCCESS!</h2>
       <p>We have stopped monitoring and will not annoy you any further. You should received a last email from us notifying the termination.</p>
-      <p>User Deleted: <span>Who are you? Do I even know you? 👀</span></p>
+      <p>User Deleted: <span class="anthonian-span">Who are you? Do I even know you? 👀</span></p>
+      <br>
+      <p><a href="https://github.com/Anthonykung/Anthonian-Uptime-Monitoring" target="_blank">Open Source Project</a> Created With <3 By <a href="https://anth.dev" target="_blank">Anthony Kung</a></p>
     </div>
     <script src="anthonian-script.js"></script>
   </body>
